Update and rename 2019-10-15-Redash初探——数据可视化系列 to 2019-10-15-Redash初探——数据可视化系列.md

--- a/_posts/2019-10-15-Redash初探——数据可视化系列.md
+++ b/_posts/2019-10-15-Redash初探——数据可视化系列.md
@@ -1,4 +1,4 @@
-Redash——开源数据查询与可视化工具
+## Redash——开源数据查询与可视化工具
 
 ￼
 Celery在Redash后端里占据了很大比重。工作时，Celery会以Redis作为消息代理，可以通过flower去监控任务状态。worker在执行任务时，可能触发机器的物理限制（内存限制等），会导致worker进程死亡，整个redash不可查询数据。
@@ -14,7 +14,7 @@ Celery在Redash后端里占据了很大比重。工作时，Celery会以Redis作
 	5.共享有价值的数据和图表。当某位同学完成了一个数据的价值挖掘，想分享给其他同学，Redash提供Dashboard功能（可永久分享出去）或生成一个临时的有生命周期的链接。
 	
 
-二次开发：
+## 二次开发：
 	二次开发的环境主要有3部分: 前端node环境；后端Python；元数据环境。在元数据的选择上，尽量不要用MySQL，Redash对MySQL支持不友好（查MySQL的支持还可以）。
 
 	
