--- a/_posts/2019-10-17-微服务架构之gRPC篇.md
+++ b/_posts/2019-10-17-微服务架构之gRPC篇.md
@@ -1,5 +1,5 @@
 ---
-title: 微服务架构——gRPC篇
+title: 微服务架构—gRPC篇
 ---
 ### 简介
 gRPC 是一款高性能、开源的 RPC 框架，产自 Google，基于 ProtoBuf 序列化协议进行开发，支持多种语言（Golang、Python、Java等），本篇只介绍 Python 的 gRPC 使用。因为 gRPC 对 HTTP/2 协议的支持使其在 Android、IOS 等客户端后端服务的开发领域具有良好的前景。gRPC 提供了一种简单的方法来定义服务，同时客户端可以充分利用 HTTP/2 stream 的特性，从而有助于节省带宽、降低 TCP 的连接次数、节省CPU的使用等
